DRY a validator
